Create global.gradle file with configuration, cleanup build.gradle, bump those libs which didn't require subsequent implementation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,14 +4,14 @@ plugins {
 }
 
 android {
-    compileSdk 33
+    compileSdk project.compileSdk
 
     defaultConfig {
-        applicationId "io.dnatechnology.dnataskandroid"
-        minSdk 21
-        targetSdk 33
-        versionCode 1
-        versionName "1.0"
+        applicationId project.applicationId
+        minSdk project.minSdk
+        targetSdk project.targetSdk
+        versionCode project.versionCode
+        versionName project.versionName
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -37,7 +37,7 @@ android {
         viewBinding true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion project.composeVersion
     }
     packagingOptions {
         resources {
@@ -59,16 +59,19 @@ dependencies {
     }
 
 
-    implementation 'androidx.core:core-ktx:1.10.1'
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
-    implementation 'androidx.activity:activity-compose:1.7.2'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit-ktx:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+    implementation "androidx.core:core-ktx:${versions.ktx}"
+    implementation "androidx.compose.ui:ui:${versions.compose}"
+    implementation "androidx.compose.material:material:${versions.compose}"
+    implementation "androidx.compose.ui:ui-tooling-preview:${versions.compose}"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:${versions.lifecycle}"
+    implementation "androidx.activity:activity-compose:${versions.compose_activity}"
+
+    testImplementation "junit:junit:${versions.junit}"
+
+    androidTestImplementation "androidx.test.ext:junit-ktx:${versions.junit_ext}"
+    androidTestImplementation "androidx.test.espresso:espresso-core:${versions.espresso}"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:${versions.compose}"
+
+    debugImplementation "androidx.compose.ui:ui-tooling: ${versions.compose}"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:${versions.compose}"
 }
