--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,3 @@
-buildscript {
-    ext {
-        compose_version = '1.4.0'
-    }
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.2.2' apply false
     id 'com.android.library' version '7.2.2' apply false
@@ -12,3 +7,5 @@ plugins {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+apply from: "global.gradle"
