--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,22 +1,17 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
 }
 
 android {
+    namespace 'io.dnatechnology.dnataskandroid.core'
     compileSdk project.compileSdk
 
     defaultConfig {
-        applicationId project.applicationId
         minSdk project.minSdk
-        targetSdk project.targetSdk
-        versionCode project.versionCode
-        versionName project.versionName
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        vectorDrawables {
-            useSupportLibrary true
-        }
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -29,9 +24,6 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
     buildFeatures {
         compose true
         viewBinding true
@@ -39,27 +31,12 @@ android {
     composeOptions {
         kotlinCompilerExtensionVersion project.composeVersion
     }
-    packagingOptions {
-        resources {
-            excludes += '/META-INF/{AL2.0,LGPL2.1}'
-        }
+    kotlinOptions {
+        jvmTarget = '1.8'
     }
 }
 
 dependencies {
-    implementation(project(":core"))
-    implementation(project(":productscard"))
-
-    implementation "androidx.appcompat:appcompat:${versions.app_compat}"
-    constraints {
-        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
-            because("kotlin-stdlib-jdk7 is now a part of kotlin-stdlib")
-        }
-        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.0") {
-            because("kotlin-stdlib-jdk8 is now a part of kotlin-stdlib")
-        }
-    }
-
 
     implementation "androidx.core:core-ktx:${versions.ktx}"
     implementation "androidx.compose.ui:ui:${versions.compose}"
@@ -67,6 +44,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:${versions.compose}"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:${versions.lifecycle}"
     implementation "androidx.activity:activity-compose:${versions.compose_activity}"
+    implementation "androidx.compose.material3:material3:${versions.material3}"
 
     testImplementation "junit:junit:${versions.junit}"
 
