--- a/global.gradle
+++ b/global.gradle
@@ -9,7 +9,8 @@ ext {
             espresso        : "3.5.1",
             junit           : "4.13.2",
             junit_ext       : "1.1.5",
-            app_compat      : "1.3.0"
+            app_compat      : "1.3.0",
+            hilt            : "2.44",
     ]
 }
 
