--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     implementation "androidx.activity:activity-compose:${versions.compose_activity}"
 
     implementation "com.google.dagger:hilt-android:${versions.hilt}"
+    implementation "androidx.hilt:hilt-navigation-compose:${versions.hilt_navigation_compose}"
     kapt "com.google.dagger:hilt-compiler:${versions.hilt}"
 
     testImplementation "junit:junit:${versions.junit}"
