--- a/global.gradle
+++ b/global.gradle
@@ -1,16 +1,17 @@
 ext {
     versions = [
-            compose         : "1.4.0",
-            material3       : "1.2.0",
-            compose_activity: "1.7.2",
-            ktx             : "1.10.1",
-            lifecycle       : "2.6.1",
+            compose                : "1.4.0",
+            material3              : "1.2.0",
+            compose_activity       : "1.7.2",
+            ktx                    : "1.10.1",
+            lifecycle              : "2.6.1",
 
-            espresso        : "3.5.1",
-            junit           : "4.13.2",
-            junit_ext       : "1.1.5",
-            app_compat      : "1.3.0",
-            hilt            : "2.44",
+            espresso               : "3.5.1",
+            junit                  : "4.13.2",
+            junit_ext              : "1.1.5",
+            app_compat             : "1.3.0",
+            hilt                   : "2.44",
+            hilt_navigation_compose: "1.1.0",
     ]
 }
 
