--- a/productscard/build.gradle
+++ b/productscard/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     implementation "androidx.compose.material3:material3:${versions.material3}"
 
     implementation "com.google.dagger:hilt-android:${versions.hilt}"
+    implementation "androidx.hilt:hilt-navigation-compose:${versions.hilt_navigation_compose}"
     kapt "com.google.dagger:hilt-compiler:${versions.hilt}"
 
     testImplementation "junit:junit:${versions.junit}"
