--- a/global.gradle
+++ b/global.gradle
@@ -12,6 +12,9 @@ ext {
             app_compat             : "1.3.0",
             hilt                   : "2.44",
             hilt_navigation_compose: "1.1.0",
+            mockk                  : "1.13.7",
+            kotest                 : "5.7.2",
+            coroutines             : "1.7.1",
     ]
 }
 
