--- a/global.gradle
+++ b/global.gradle
@@ -11,7 +11,7 @@ ext {
             junit_ext              : "1.1.5",
             app_compat             : "1.3.0",
             hilt                   : "2.44",
-            hilt_navigation_compose: "1.1.0",
+            hilt_navigation_compose: "1.1.0-alpha01",
             mockk                  : "1.13.7",
             kotest                 : "5.7.2",
             coroutines             : "1.7.1",
